# mcp-watchdog

./: README.md  demo.py  pyproject.toml  server.json
.github/workflows/: ci.yml  mcp-registry.yml
configs/: claude_desktop_example.json  cursor_example.json  windsurf_example.json
src/mcp_watchdog/: __init__.py  __main__.py  alerts.py  behavioral.py  cli.py  entropy.py  flow_tracker.py  input_sanitizer.py  main.py  oauth_guard.py  param_scanner.py  proxy.py  rate_limiter.py  registry_checker.py  scope.py  semantic.py  smac.py  stdio_transport.py  tool_registry.py  tool_shadow.py  upstream.py  url_filter.py
tests/: fake_mcp_server.py  test_ansi_escape.py  test_audit_fixes.py  test_behavioral.py  test_capabilities.py  test_e2e_proxy.py  test_elicitation.py  test_entropy.py  test_flow_tracker.py  test_flow_tracker_extended.py  test_input_sanitizer.py  test_integration_attack_flows.py  test_integration_pipeline.py  test_notification_types.py  test_oauth_guard.py  test_param_scanner.py  test_prompts_get.py  test_proxy.py  test_rate_limiter.py  test_read_line.py  test_registry_checker.py  test_resources_prompts.py  test_reverse_shell.py  test_sampling_deep.py  test_schema_poisoning.py  test_scope.py  test_scope_integration.py  test_semantic.py  test_session_integrity.py  test_smac.py  test_smac_json_edge_cases.py  test_sql_injection.py  test_token_detection.py  test_token_replay.py  test_tool_registry.py  test_tool_shadow.py  test_url_exfiltration.py  test_url_filter.py
