[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-watchdog"
version = "0.1.0"
description = "MCP security proxy — SMAC-L3 for AI coding assistants"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "websockets>=12.0",
    "rich>=13.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
semantic = ["anthropic>=0.40.0"]
filesystem = ["watchdog>=4.0"]
all = ["anthropic>=0.40.0", "watchdog>=4.0"]

[project.scripts]
mcp-watchdog = "mcp_watchdog.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
